# Effects-Example

./: CHANGELOG.md  Example.cabal  README.md
app/: Effects.hs  Main.hs
app/Effects/: Network.hs
client/: Main.hs
server/: Main.hs
server/Effects/: Chan.hs  Logging.hs  Network.hs  Threads.hs
