cabal-version:   3.0
name:            Example
version:         0.1.0.0
license:         AGPL-3.0-or-later
author:          James Hobson
maintainer:      james@hobson.space
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable server
    import:           warnings
    main-is:          Main.hs
    other-modules:    Effects
                      Effects.Logging
                      Effects.Chan
                      Effects.Threads
    other-modules:    Effects.Network
    build-depends:    base ^>=4.16.4.0,
                      freer-simple,
                      time,
                      network,
                      network-run,
                      optparse-applicative,
                      stm
    hs-source-dirs:   server
    default-language: Haskell2010

executable client
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      microlens,
                      microlens-mtl,
                      microlens-th,
                      vty,
                      brick,
                      text
    hs-source-dirs:   client
    ghc-options:      -threaded
    default-language: Haskell2010
