cabal-version:   3.0
name:            Example
version:         0.1.0.0
license:         AGPL-3.0-or-later
maintainer:      james@hobson.space
author:          James Hobson
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable server
    main-is:          Main.hs
    hs-source-dirs:   server
    other-modules:
        Effects
        Effects.Logging
        Effects.Chan
        Effects.Threads
        Effects.Network

    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.17.2.1 && <5,
        freer-simple >=1.2.0.0 && <1.3.0.0,
        time >=1.12.2 && <1.13,
        network >=3.2.4.0 && <3.3,
        network-run >=0.4.1 && <0.5.0,
        optparse-applicative -any,
        stm >=2.5.1.0 && <2.6

executable client
    main-is:          Main.hs
    hs-source-dirs:   client
    default-language: Haskell2010
    ghc-options:      -Wall -threaded
    build-depends:
        base >=4.17.2.1 && <5,
        microlens -any,
        microlens-mtl -any,
        microlens-th -any,
        vty ==6.2.*,
        vty-crossplatform -any,
        brick >=2.0 && <3.0,
        network >=3.2.4.0 && <3.3,
        network-run >=0.4.1 && <0.5.0,
        attoparsec -any,
        text >=2.0.2 && <2.1
